--- a/assets/css/beranda.css
+++ b/assets/css/beranda.css
@@ -290,6 +290,10 @@ section {
   display: none;
 }
 
+/*--------------------------------------------------------------
+# Button sign 
+--------------------------------------------------------------*/
+
 .button-nav {
     border: 2px solid #57381F; /* Menambahkan border solid dengan warna yang ditentukan */
     border-radius: 30px; /* Menentukan radius sudut */
@@ -303,6 +307,7 @@ section {
     margin: -100px; /* Menambahkan jarak di sekitar tombol */
     cursor: pointer; /* Mengubah kursor saat dihover ke pointer */
     transition: background-color 0.3s, color 0.3s; /* Efek transisi saat hover */
+     font-family: var(--font-primary);
 }
 
 
@@ -310,6 +315,7 @@ section {
 .button-nav:hover {
     background-color: #000; /* Ubah warna latar belakang saat tombol dihover */
     color: #FFF; /* Ubah warna teks saat tombol dihover */
+    font-family: var(--font-primary);
 }
 
 
@@ -419,35 +425,16 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Hero Section
+# Hero
 --------------------------------------------------------------*/
+
 #hero {
   width: 100%;
   height: 100vh;
-  background: 
-    linear-gradient(to bottom, rgba(255, 255, 255, 0.079) 80%, rgba(150, 86, 35, 1) 100%),
-    url("../img/wayang/beranda.png") top left;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.079) 80%, rgba(150, 86, 35, 1) 100%), url("../img/wayang/beranda.png") top left;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-}
-
-
-/* Efek fading dengan overlay pada bagian bawah gambar */
-#hero:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px; /* Sesuaikan tinggi overlay sesuai kebutuhan 
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(217, 217, 217, 0.6) 100%); */
-}
-
-/* Styling untuk teks */
-#hero .container {
-  position: relative;
-  text-align: center; /* Menengahkan teks */
 }
 
 #hero h1 {
@@ -457,57 +444,27 @@ section {
   line-height: 56px;
   color: #fff;
   font-family: "Poppins", sans-serif;
-text-shadow: 
-        -1px -1px 0 #000,  
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000,
-        -2px -2px 0 #000,  
-        2px -2px 0 #000,
-        -2px 2px 0 #000,
-        2px 2px 0 #000,
-        -3px -3px 0 #000,  
-        3px -3px 0 #000,
-        -3px 3px 0 #000,
-        3px 3px 0 #000; /* Bayangan teks untuk efek stroke */
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000, -3px -3px 0 #000, 3px -3px 0 #000, -3px 3px 0 #000, 3px 3px 0 #000;
 }
+
 #hero h2 {
-  color: #fff; /* Warna teks putih */
+  color: #fff;
   margin: 5px 0 30px 0;
   font-size: 24px;
   font-weight: 400;
- text-shadow: 
-        -1px -1px 0 #925A2C,  
-        1px -1px 0 #925A2C,
-        -1px 1px 0 #925A2C,
-        1px 1px 0 #925A2C,
-        -2px -2px 0 #925A2C,  
-        2px -2px 0 #925A2C,
-        -2px 2px 0 #925A2C,
-        2px 2px 0 #925A2C,
-        -3px -3px 0 #925A2C,  
-        3px -3px 0 #925A2C,
-        -3px 3px 0 #925A2C,
-        3px 3px 0 #925A2C; /* Bayangan teks untuk efek stroke */
+  text-shadow: -1px -1px 0 #925A2C, 1px -1px 0 #925A2C, -1px 1px 0 #925A2C, 1px 1px 0 #925A2C, -2px -2px 0 #925A2C, 2px -2px 0 #925A2C, -2px 2px 0 #925A2C, 2px 2px 0 #925A2C, -3px -3px 0 #925A2C, 3px -3px 0 #925A2C, -3px 3px 0 #925A2C, 3px 3px 0 #925A2C;
 }
 
-
 @media (max-width: 768px) {
-  #hero {
-    height: 100vh;
-  }
-
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
   }
-
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
   }
-
 }
 
 @media (max-height: 500px) {
@@ -515,6 +472,7 @@ text-shadow:
     height: 120vh;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Wayang Kulit 
