--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -1,8 +1,6 @@
-/* Default Styles */
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
     min-height: 100vh;
     background-color: #3E2917;
     display: flex;
@@ -18,7 +16,7 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     display: flex;
-    align-items: center;
+    align-items: center; /* Menengahkan konten secara vertikal */
     border-radius: 30px;
 }
 
@@ -26,7 +24,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 50%;
+    width: 50%; /* Mengisi setengah bagian kiri kontainer */
     height: 100%;
 }
 
@@ -36,29 +34,34 @@ body {
     object-fit: cover;
 }
 
-.sign-in {
-    position: absolute;
-    top: 40%;
-    right: 0;
-    transform: translateY(-50%);
+.sign-up {
+    position: absolute; /* Ubah menjadi absolute agar bisa diposisikan dengan tepat */
+    top: 40%; /* Membuatnya berada di tengah vertikal */
+    right: 0; /* Menggeser ke kanan */
+    transform: translateY(-50%); /* Untuk memindahkan posisi ke tengah secara vertikal */
     padding: 40px;
     text-align: center;
-    width: 50%;
-    z-index: 1;
-    color: #fff;
+    width: 50%; /* Mengatur formulir login agar menempati setengah bagian kanan kontainer */
+    z-index: 1; /* Pastikan formulir login berada di depan gambar latar belakang */
+    color: #fff; /* Tambahkan warna teks putih */
 }
 
-.sign-in h1 {
+
+.container > .sign-in {
+    flex: 1;
+}
+
+.sign-up h1 {
     font-size: 60px;
     color: #000;
     font-family: "Oranienbaum", serif;
     border-bottom: 3px solid #000;
     width: 200px; 
     margin: 0 auto; 
-    margin-top: 80px;
 }
 
-.sign-in form {
+
+.sign-up form {
     width: 100%;
     margin-top: 50px;
 }
@@ -68,14 +71,14 @@ body {
     font-weight: bold;
 }
 
-.sign-in form .input-icon {
+.sign-up form .input-icon {
     position: relative;
     width: 100%;
     color: #fff;
 }
 
-.sign-in form .input-icon input {
-    padding: 10px 10px 10px 40px; 
+.sign-up form .input-icon input {
+    padding: 10px 10px 10px 40px; /* Sesuaikan dengan kebutuhan */
     border: 1px solid #000;
     border-radius: 10px;
     margin-bottom: 15px;
@@ -83,38 +86,34 @@ body {
     background-color: #AB652C;
     color: #fff;
     font-family: "Oranienbaum", serif;
-    background-image: url('..icon/icon_person.png'); 
-    background-size: 20px; 
-    background-position: 10px center; 
+    background-image: url('..icon/icon_person.png'); /* Ganti 'icon.png' dengan nama gambar ikon Anda */
+    background-size: 20px; /* Sesuaikan ukuran ikon */
+    background-position: 10px center; /* Sesuaikan posisi ikon */
     background-repeat: no-repeat;
 }
 
-.sign-in form button {
-    background-color: #fff;
-    color: #000;
-    padding: 10px 145px;
-    border: 100px;
-    border-radius: 6px;
-    cursor: pointer;
-    font-family: "Oranienbaum", serif;
-    margin-top: 20px; 
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 300px; /* Sesuaikan lebar maksimum container sesuai kebutuhan */
+    margin: 0 auto; /* Mengatur agar container berada di tengah */
 }
 
-.sign-in form button:hover {
+.button-container button {
+    background-color: #fff;
+    color: #000;
+    padding: 10px 100px;
+    border: none; /* Menghapus border */
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: "Oranienbaum", serif;
+}
+
+.button-container button:hover {
     background-color: #3E2917;
     color: #fff;
     font-family: "Oranienbaum", serif;
 }
-
-.a-sign-in {
-    position: relative;
-    bottom: -20px;
-    left:  140px;
-    color: #fff;
-    text-decoration: underline;
-    font-family: "Oranienbaum", serif;
-}
-
 
 
 .image-container {
@@ -126,44 +125,4 @@ body {
 .image-container img {
     max-width: 100%;
     max-height: 100%;
-}
-
-/* Responsif */
-@media only screen and (max-width: 768px) {
-    .container {
-        width: 90%;
-        height: auto;
-        max-width: none;
-    }
-
-    .shadow-puppet-background {
-        width: 100%;
-    }
-
-    .sign-in {
-        position: static;
-        top: auto;
-        right: auto;
-        transform: none;
-        width: 100%;
-        padding: 20px;
-        margin-top: 20px;
-    }
-
-    .sign-in h1 {
-        font-size: 40px;
-        margin-top: 40px;
-    }
-
-    .sign-in form {
-        margin-top: 30px;
-    }
-
-    .sign-in form .input-icon input {
-        padding: 10px 30px;
-    }
-
-    .sign-in form button {
-        padding: 10px 50px;
-    }
 }
