--- a/assets/css/sign_up.css
+++ b/assets/css/sign_up.css
@@ -6,7 +6,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
+
+.back-button {
+    position: absolute;
+    top: 10px; /* Atur jarak dari atas */
+    left: 10px; /* Atur jarak dari kiri */
+    color: #fff; /* Warna teks */
+    font-family: "Oranienbaum", serif;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.back-button:hover {
+    text-decoration: underline;
+}
+
+
+
 
 .container {
     position: relative;
@@ -16,15 +34,15 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     display: flex;
-    align-items: center; /* Menengahkan konten secara vertikal */
+    align-items: center;
     border-radius: 30px;
 }
 
 .shadow-puppet-background {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 50%; /* Mengisi setengah bagian kiri kontainer */
+    right: 0; /* Mengisi setengah bagian kanan kontainer */
+    width: 50%; 
     height: 100%;
 }
 
@@ -35,20 +53,15 @@ body {
 }
 
 .sign-up {
-    position: absolute; /* Ubah menjadi absolute agar bisa diposisikan dengan tepat */
-    top: 40%; /* Membuatnya berada di tengah vertikal */
-    right: 0; /* Menggeser ke kanan */
-    transform: translateY(-50%); /* Untuk memindahkan posisi ke tengah secara vertikal */
+    position: absolute;
+    top: 40%;
+    left: 0; /* Menggeser ke kiri */
+    transform: translateY(-50%);
     padding: 40px;
     text-align: center;
-    width: 50%; /* Mengatur formulir login agar menempati setengah bagian kanan kontainer */
-    z-index: 1; /* Pastikan formulir login berada di depan gambar latar belakang */
-    color: #fff; /* Tambahkan warna teks putih */
-}
-
-
-.container > .sign-in {
-    flex: 1;
+    width: 50%;
+    z-index: 1;
+    color: #fff;
 }
 
 .sign-up h1 {
@@ -56,19 +69,14 @@ body {
     color: #000;
     font-family: "Oranienbaum", serif;
     border-bottom: 3px solid #000;
-    width: 200px; 
-    margin: 0 auto; 
+    width: 200px;
+    margin: 0 auto;
+    margin-top: 80px;
 }
-
 
 .sign-up form {
     width: 100%;
     margin-top: 50px;
-}
-
-.sign-in form label {
-    margin-bottom: 5px;
-    font-weight: bold;
 }
 
 .sign-up form .input-icon {
@@ -78,7 +86,7 @@ body {
 }
 
 .sign-up form .input-icon input {
-    padding: 10px 10px 10px 40px; /* Sesuaikan dengan kebutuhan */
+    padding: 10px 10px 10px 40px;
     border: 1px solid #000;
     border-radius: 10px;
     margin-bottom: 15px;
@@ -86,35 +94,43 @@ body {
     background-color: #AB652C;
     color: #fff;
     font-family: "Oranienbaum", serif;
-    background-image: url('..icon/icon_person.png'); /* Ganti 'icon.png' dengan nama gambar ikon Anda */
-    background-size: 20px; /* Sesuaikan ukuran ikon */
-    background-position: 10px center; /* Sesuaikan posisi ikon */
+    background-image: url('..icon/icon_person.png');
+    background-size: 20px;
+    background-position: 10px center;
     background-repeat: no-repeat;
 }
 
 .button-container {
     display: flex;
     justify-content: space-between;
-    max-width: 300px; /* Sesuaikan lebar maksimum container sesuai kebutuhan */
-    margin: 0 auto; /* Mengatur agar container berada di tengah */
+    max-width: 300px;
+    margin: 0 auto;
 }
 
 .button-container button {
-    background-color: #fff;
-    color: #000;
-    padding: 10px 100px;
-    border: none; /* Menghapus border */
+    background-color: #fff; /* Ubah warna latar belakang */
+    color: #000; /* Warna teks putih */
+    padding: 10px 20px; /* Sesuaikan padding */
+    border: none;
     border-radius: 4px;
     cursor: pointer;
     font-family: "Oranienbaum", serif;
+    transition: background-color 0.3s; /* Efek transisi */
 }
 
 .button-container button:hover {
-    background-color: #3E2917;
+    background-color: #3E2917; /* Warna latar belakang saat hover */
     color: #fff;
-    font-family: "Oranienbaum", serif;
 }
 
+.a-sign-in {
+    position: relative;
+    bottom: -20px;
+    right:  140px;
+    color: #fff;
+    text-decoration: underline;
+    font-family: "Oranienbaum", serif;
+}
 
 .image-container {
     display: flex;
