--- a/assets/css/sejarah.css
+++ b/assets/css/sejarah.css
@@ -158,9 +158,7 @@ section {
 @media (min-width: 1280px) {
   .navbar {
     padding: 0;
-
   }
-
 
   .navbar ul {
     margin: 0;
@@ -183,7 +181,7 @@ section {
     font-family: var(--font-default);
     font-size: 16px;
     font-weight: 500;
-    color: white;
+    color: #fff;
     white-space: nowrap;
     transition: 0.3s;
   }
@@ -195,7 +193,7 @@ section {
     margin-left: 5px;
   }
 
-  .navbar a:hover,
+  .navbar a:hover
   .navbar .active,
   .navbar .active:focus,
   .navbar li:hover>a {
@@ -227,7 +225,7 @@ section {
     z-index: 99;
     opacity: 0;
     visibility: hidden;
-    background: var(--color-white);
+    background: #583214;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: 0.3s;
     border-radius: 4px;
@@ -386,7 +384,7 @@ section {
 
   .mobile-nav-toggle {
     display: inline-block;
-    color: #fff;
+    color: var(--color-secondary);
     font-size: 28px;
     cursor: pointer;
     line-height: 0;
@@ -421,6 +419,7 @@ section {
     display: block;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Hero
