--- a/assets/css/komunitas.css
+++ b/assets/css/komunitas.css
@@ -158,275 +158,275 @@
     scroll-margin-top: 70px;
   }
   
-  /*--------------------------------------------------------------
-  # Desktop Navigation 
-  --------------------------------------------------------------*/
-  @media (min-width: 1280px) {
-    .navbar {
-      padding: 0;
-  
-    }
-  
-  
-    .navbar ul {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      list-style: none;
-      align-items: center;
-    }
-  
-    .navbar li {
-      position: relative;
-    }
-  
-    .navbar a,
-    .navbar a:focus {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 0 10px 30px;
-      font-family: var(--font-default);
-      font-size: 16px;
-      font-weight: 500;
-      color: white;
-      white-space: nowrap;
-      transition: 0.3s;
-    }
-  
-    .navbar a i,
-    .navbar a:focus i {
-      font-size: 12px;
-      line-height: 0;
-      margin-left: 5px;
-    }
-  
-    .navbar a:hover,
-    .navbar .active,
-    .navbar .active:focus,
-    .navbar li:hover>a {
-      color: var(--color-default);
-    }
-  
-    .navbar .getstarted,
-    .navbar .getstarted:focus {
-      background: var(--color-primary);
-      padding: 8px 20px;
-      margin-left: 30px;
-      border-radius: 4px;
-      color: var(--color-white);
-    }
-  
-    .navbar .getstarted:hover,
-    .navbar .getstarted:focus:hover {
-      color: var(--color-white);
-      background: rgba(var(--color-primary-rgb), 0.8);
-    }
-  
-    .navbar .dropdown ul {
-      display: block;
-      position: absolute;
-      left: 14px;
-      top: calc(100% + 30px);
-      margin: 0;
-      padding: 10px 0;
-      z-index: 99;
-      opacity: 0;
-      visibility: hidden;
-      background: var(--color-white);
-      box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-      transition: 0.3s;
-      border-radius: 4px;
-    }
-  
-    .navbar .dropdown ul li {
-      min-width: 200px;
-    }
-  
-    .navbar .dropdown ul a {
-      padding: 10px 20px;
-      font-size: 15px;
-      text-transform: none;
-      font-weight: 400;
-    }
-  
-    .navbar .dropdown ul a i {
-      font-size: 12px;
-    }
-  
-    .navbar .dropdown ul a:hover,
-    .navbar .dropdown ul .active:hover,
-    .navbar .dropdown ul li:hover>a {
-      color: var(--color-primary);
-    }
-  
-    .navbar .dropdown:hover>ul {
-      opacity: 1;
-      top: 100%;
-      visibility: visible;
-    }
-  
-    .navbar .dropdown .dropdown ul {
-      top: 0;
-      left: calc(100% - 30px);
-      visibility: hidden;
-    }
-  
-    .navbar .dropdown .dropdown:hover>ul {
-      opacity: 1;
-      top: 0;
-      left: 100%;
-      visibility: visible;
-    }
+/*--------------------------------------------------------------
+# Desktop Navigation 
+--------------------------------------------------------------*/
+@media (min-width: 1280px) {
+  .navbar {
+    padding: 0;
   }
-  
-  @media (min-width: 1280px) and (max-width: 1366px) {
-    .navbar .dropdown .dropdown ul {
-      left: -90%;
-    }
-  
-    .navbar .dropdown .dropdown:hover>ul {
-      left: -100%;
-    }
+
+  .navbar ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
   }
-  
-  .mobile-nav-toggle {
+
+  .navbar li {
+    position: relative;
+  }
+
+  .navbar a,
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0 10px 30px;
+    font-family: var(--font-default);
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+
+  .navbar a i,
+  .navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+  }
+
+  .navbar a:hover
+  .navbar .active,
+  .navbar .active:focus,
+  .navbar li:hover>a {
+    color: var(--color-default);
+  }
+
+  .navbar .getstarted,
+  .navbar .getstarted:focus {
+    background: var(--color-primary);
+    padding: 8px 20px;
+    margin-left: 30px;
+    border-radius: 4px;
+    color: var(--color-white);
+  }
+
+  .navbar .getstarted:hover,
+  .navbar .getstarted:focus:hover {
+    color: var(--color-white);
+    background: rgba(var(--color-primary-rgb), 0.8);
+  }
+
+  .navbar .dropdown ul {
+    display: block;
+    position: absolute;
+    left: 14px;
+    top: calc(100% + 30px);
+    margin: 0;
+    padding: 10px 0;
+    z-index: 99;
+    opacity: 0;
+    visibility: hidden;
+    background: #583214;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    transition: 0.3s;
+    border-radius: 4px;
+  }
+
+  .navbar .dropdown ul li {
+    min-width: 200px;
+  }
+
+  .navbar .dropdown ul a {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: none;
+    font-weight: 400;
+  }
+
+  .navbar .dropdown ul a i {
+    font-size: 12px;
+  }
+
+  .navbar .dropdown ul a:hover,
+  .navbar .dropdown ul .active:hover,
+  .navbar .dropdown ul li:hover>a {
+    color: var(--color-primary);
+  }
+
+  .navbar .dropdown:hover>ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+  }
+
+  .navbar .dropdown .dropdown ul {
+    top: 0;
+    left: calc(100% - 30px);
+    visibility: hidden;
+  }
+
+  .navbar .dropdown .dropdown:hover>ul {
+    opacity: 1;
+    top: 0;
+    left: 100%;
+    visibility: visible;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1366px) {
+  .navbar .dropdown .dropdown ul {
+    left: -90%;
+  }
+
+  .navbar .dropdown .dropdown:hover>ul {
+    left: -100%;
+  }
+}
+
+.mobile-nav-toggle {
+  display: none;
+}
+
+/*--------------------------------------------------------------
+# Button sign 
+--------------------------------------------------------------*/
+
+.button-nav {
+    border: 2px solid #57381F; /* Menambahkan border solid dengan warna yang ditentukan */
+    border-radius: 30px; /* Menentukan radius sudut */
+    background-color: #57381F; /* Warna latar belakang */
+    color: #FFF; /* Warna teks */
+    padding: 8px 16px; /* Padding di dalam tombol */
+    text-align: center; /* Posisi teks ke tengah */
+    text-decoration: none; /* Menghapus dekorasi teks */
+    display: inline-block; /* Agar tombol tidak menempati ruang yang lebar */
+    font-size: 14px; /* Ukuran teks yang dikurangi */
+    margin: -100px; /* Menambahkan jarak di sekitar tombol */
+    cursor: pointer; /* Mengubah kursor saat dihover ke pointer */
+    transition: background-color 0.3s, color 0.3s; /* Efek transisi saat hover */
+     font-family: var(--font-primary);
+}
+
+
+/* Efek hover */
+.button-nav:hover {
+    background-color: #000; /* Ubah warna latar belakang saat tombol dihover */
+    color: #FFF; /* Ubah warna teks saat tombol dihover */
+    font-family: var(--font-primary);
+}
+
+
+/*--------------------------------------------------------------
+# Mobile Navigation
+--------------------------------------------------------------*/
+@media (max-width: 1279px) {
+  .navbar {
+    padding: 0;
+    z-index: 9997;
+  }
+
+  .navbar ul {
     display: none;
+    position: absolute;
+    inset: 55px 15px 15px 15px;
+    padding: 10px 0;
+    margin: 0;
+    border-radius: 10px;
+    background-color: var(--color-white);
+    overflow-y: auto;
+    transition: 0.3s;
+    z-index: 9998;
   }
-  
-  /*--------------------------------------------------------------
-  # Button sign 
-  --------------------------------------------------------------*/
-  
-  .button-nav {
-      border: 2px solid #57381F; /* Menambahkan border solid dengan warna yang ditentukan */
-      border-radius: 30px; /* Menentukan radius sudut */
-      background-color: #57381F; /* Warna latar belakang */
-      color: #FFF; /* Warna teks */
-      padding: 8px 16px; /* Padding di dalam tombol */
-      text-align: center; /* Posisi teks ke tengah */
-      text-decoration: none; /* Menghapus dekorasi teks */
-      display: inline-block; /* Agar tombol tidak menempati ruang yang lebar */
-      font-size: 14px; /* Ukuran teks yang dikurangi */
-      margin: -100px; /* Menambahkan jarak di sekitar tombol */
-      cursor: pointer; /* Mengubah kursor saat dihover ke pointer */
-      transition: background-color 0.3s, color 0.3s; /* Efek transisi saat hover */
-       font-family: var(--font-primary);
+
+  .navbar a,
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    font-family: var(--font-primary);
+    font-size: 15px;
+    font-weight: 600;
+    color: var(--color-primary);
+    white-space: nowrap;
+    transition: 0.3s;
   }
-  
-  
-  /* Efek hover */
-  .button-nav:hover {
-      background-color: #000; /* Ubah warna latar belakang saat tombol dihover */
-      color: #FFF; /* Ubah warna teks saat tombol dihover */
-      font-family: var(--font-primary);
+
+  .navbar a i,
+  .navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
   }
-  
-  
-  /*--------------------------------------------------------------
-  # Mobile Navigation
-  --------------------------------------------------------------*/
-  @media (max-width: 1279px) {
-    .navbar {
-      padding: 0;
-      z-index: 9997;
-    }
-  
-    .navbar ul {
-      display: none;
-      position: absolute;
-      inset: 55px 15px 15px 15px;
-      padding: 10px 0;
-      margin: 0;
-      border-radius: 10px;
-      background-color: var(--color-white);
-      overflow-y: auto;
-      transition: 0.3s;
-      z-index: 9998;
-    }
-  
-    .navbar a,
-    .navbar a:focus {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 20px;
-      font-family: var(--font-primary);
-      font-size: 15px;
-      font-weight: 600;
-      color: var(--color-primary);
-      white-space: nowrap;
-      transition: 0.3s;
-    }
-  
-    .navbar a i,
-    .navbar a:focus i {
-      font-size: 12px;
-      line-height: 0;
-      margin-left: 5px;
-    }
-  
-    .navbar a:hover,
-    .navbar .active,
-    .navbar .active:focus,
-    .navbar li:hover>a {
-      color: var(--color-primary);
-    }
-  
-    .navbar .dropdown ul,
-    .navbar .dropdown .dropdown ul {
-      position: static;
-      display: none;
-      z-index: 99;
-      padding: 10px 0;
-      margin: 10px 20px;
-      background: var(--color-white);
-      transition: all 0.5s ease-in-out;
-      box-shadow: 0px 0px 30px rgba(var(--color-black-rgb), 0.1);
-    }
-  
-    .navbar .dropdown>.dropdown-active,
-    .navbar .dropdown .dropdown>.dropdown-active {
-      display: block;
-    }
-  
-    .mobile-nav-toggle {
-      display: inline-block;
-      color: #fff;
-      font-size: 28px;
-      cursor: pointer;
-      line-height: 0;
-      transition: 0.5s;
-    }
-  
-    .mobile-nav-toggle.bi-x {
-      color: var(--color-black);
-    }
-  
-    .mobile-nav-active {
-      overflow: hidden;
-    }
-  
-    .mobile-nav-active .mobile-nav-toggle {
-      position: fixed;
-      top: 15px;
-      right: 15px;
-      z-index: 9999;
-      color: var(--color-white);
-    }
-  
-    .mobile-nav-active .navbar {
-      position: fixed;
-      overflow: hidden;
-      inset: 0;
-      background: rgba(var(--color-black-rgb), 0.6);
-      transition: 0.3s;
-    }
-  
-    .mobile-nav-active .navbar>ul {
-      display: block;
-    }
+
+  .navbar a:hover,
+  .navbar .active,
+  .navbar .active:focus,
+  .navbar li:hover>a {
+    color: var(--color-primary);
   }
+
+  .navbar .dropdown ul,
+  .navbar .dropdown .dropdown ul {
+    position: static;
+    display: none;
+    z-index: 99;
+    padding: 10px 0;
+    margin: 10px 20px;
+    background: var(--color-white);
+    transition: all 0.5s ease-in-out;
+    box-shadow: 0px 0px 30px rgba(var(--color-black-rgb), 0.1);
+  }
+
+  .navbar .dropdown>.dropdown-active,
+  .navbar .dropdown .dropdown>.dropdown-active {
+    display: block;
+  }
+
+  .mobile-nav-toggle {
+    display: inline-block;
+    color: var(--color-secondary);
+    font-size: 28px;
+    cursor: pointer;
+    line-height: 0;
+    transition: 0.5s;
+  }
+
+  .mobile-nav-toggle.bi-x {
+    color: var(--color-black);
+  }
+
+  .mobile-nav-active {
+    overflow: hidden;
+  }
+
+  .mobile-nav-active .mobile-nav-toggle {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 9999;
+    color: var(--color-white);
+  }
+
+  .mobile-nav-active .navbar {
+    position: fixed;
+    overflow: hidden;
+    inset: 0;
+    background: rgba(var(--color-black-rgb), 0.6);
+    transition: 0.3s;
+  }
+
+  .mobile-nav-active .navbar>ul {
+    display: block;
+  }
+}
+
+
   
   /*--------------------------------------------------------------
   # Hero
