--- a/assets/css/sign_in.css
+++ b/assets/css/sign_in.css
@@ -115,6 +115,15 @@ body {
     font-family: "Oranienbaum", serif;
 }
 
+.a-sign-back {
+    position: relative;
+    bottom: -20px;
+    right:  140px;
+    color: #fff;
+    text-decoration: underline;
+    font-family: "Oranienbaum", serif;
+}
+
 
 
 .image-container {
